--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ permalink: /404.html
 ---
 你好呀，迷路的人。  
 我也不知道这里是哪里，  
-但是，也许你可以去[哪里](aso-ljh.github.io/mypage)看看。 
+但是，也许你可以去[那里](https://aso-ljh.github.io/mypage)看看。 
 嘻嘻。  
 哈哈。  
 嘿嘿。  
